--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:fresh": "pkill -f 'next dev' 2>/dev/null; sleep 1; next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "framer-motion": "^12.24.0",
+    "gsap": "^3.14.2",
+    "lenis": "^1.3.17",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
